# udf-forensic

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml
docs/: index.md  privacy.md  terms.md  validation.md
src/: findings.rs  lib.rs
tests/: findings.rs
tests/data/: README.md
