[package]
name = "udf-forensic"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Forensic-grade, from-scratch UDF (ECMA-167 / OSTA) reader — volume recognition, partition maps (physical/virtual/sparable/metadata), File Entry and directory (FID) traversal, and file data over any Read + Seek source"
repository = "https://github.com/SecurityRonin/udf-forensic"
homepage = "https://github.com/SecurityRonin/udf-forensic"
documentation = "https://docs.rs/udf-forensic"
readme = "README.md"
keywords = ["forensics", "udf", "ecma-167", "filesystem", "dfir"]
categories = ["parser-implementations", "filesystem"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
