[package]
name = "udf-forensic"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Forensic-grade, from-scratch UDF (ECMA-167 / OSTA) reader and tamper analyzer — volume recognition, partition maps (physical/virtual/sparable/metadata), File Entry and directory (FID) traversal, file data, plus graded findings (tag CRC/checksum, orphan File Entries, slack, file-after-volume) over any Read + Seek source"
repository = "https://github.com/SecurityRonin/udf-forensic"
homepage = "https://github.com/SecurityRonin/udf-forensic"
documentation = "https://docs.rs/udf-forensic"
readme = "README.md"
keywords = ["forensics", "udf", "ecma-167", "filesystem", "dfir"]
categories = ["parser-implementations", "filesystem"]
# Real mkudffs-authored UDF images used only by the in-crate real_media_tests;
# they are committed for reproducible local validation but must not bloat the
# published crate (downstream consumers never run these tests).
exclude = ["tests/data/*.img"]

[features]
serde = ["dep:serde", "forensicnomicon/serde"]

[dependencies]
forensicnomicon = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
